--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,190 @@
+/* Colors */
 :root {
+  --color-chicken-yellow: #ffcb47;
+  --color-deep-blue: #141b41;
+  --color-lemon-green: #7ee081;
+  --color-light-blue: #bce7fd;
+}
+
+/* Typography */
+html {
+  /* 62.5% of 15px (Browser default) = 10px is the root element size*/
+  font-size: 41.6%;
+  line-height: 1.5;
+}
+
+body {
+  color: var(--color-deep-blue);
+  font-family: Comfortaa, Arial, Helvetica, sans-serif;
+  font-size: 2.4rem;
+}
+
+h2,
+h3 {
+  margin-bottom: 2.4rem;
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  font-size: 5rem;
+}
+
+p {
+  margin-top: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  /* Font size media query */
+}
+
+/*Links */
+a {
+  text-decoration: none;
+}
+
+/*Lists*/
+.list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+/* Generic Cards */
+.card {
+  border-radius: 30px;
+  box-shadow: 0 0 15px 0 var(--color-deep-blue);
+  overflow: hidden;
+}
+
+.card__body {
+  padding: 0 1.5rem;
+  font-size: 4rem;
+}
+.card__header {
+  background-color: var(--color-deep-blue);
+  display: block;
+}
+
+.waves {
+  display: block;
+  width: 100%;
+}
+
+/*Skill Cards*/
+.skill__title {
+  color: var(--color-light-blue);
+  margin: 0 auto;
+  padding-top: 1rem;
+
+  font-weight: 100;
+  text-align: center;
+}
+
+.skill__item {
+  margin: 2rem auto;
+  padding-left: 15%;
+}
+
+/* Collapsibles */
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s;
+}
+.collapsible__toggler {
+  cursor: pointer;
+}
+.collapsible--extended .collapsible__toggler {
+  color: var(--color-light-blue);
+  border-color: var(--color-light-blue);
+}
+.collapsible--extended .collapsible__content {
+  max-height: 100vh;
+}
+
+/*Nav Bar*/
+.nav {
+  padding: 2rem;
+  background: var(--color-deep-blue);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.nav__list {
+  width: 100%;
+  background: linear-gradient(
+    var(--color-deep-blue),
+    var(--color-lemon-green) 30%
+  );
+  overflow: hidden;
+  border-radius: 0 0 30px 30px;
+  margin: 0;
+}
+
+.nav__item {
+  border-top: 4px solid var(--color-deep-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.nav__item:first-child {
+  margin-top: 3rem;
+  border-top: none;
+}
+
+.nav__item:hover {
+  color: var(--color-light-blue);
+  transition: color 0.3s;
+}
+.nav__item > a {
+  color: inherit;
+  margin: 1rem 4rem;
+  font-size: 4rem;
+  font-weight: 500;
+}
+
+.nav__toggler {
+  color: var(--color-lemon-green);
+  padding: 5px;
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: var(--color-lemon-green);
+  transition: all 0.3s;
+}
+
+@media screen and (min-width: 768px) {
+  .collapsible__toggler {
+    display: none;
+  }
+
+  .nav__list {
+    width: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    color: var(--color-lemon-green);
+    background: var(--color-deep-blue);
+    font-size: 1.5rem;
+    max-height: 100vh;
+  }
+  .nav__item {
+    border-bottom: 1px solid var(--color-lemon-green);
+    margin-left: 2rem;
+  }
+  .nav__item:first-child {
+    margin: 0;
+  }
+  .nav__item > a {
+    margin: 1rem;
+    font-size: 3rem;
+  }
 }
