Added Flask App

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,11 @@ a {
   margin-right: 2rem;
 }
 
+.list__item:hover {
+  color: var(--color-light-blue);
+  transition: color 0.3s;
+}
+
 /* Generic Cards */
 .card {
   border-radius: 30px;
